Created nmap view. Organized files into folders

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>W+M1</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
 <body>
@@ -57,6 +57,7 @@
           </p>
           <ul class="menu-list">
             <li style="padding:1px;"><a href="/#/credits" class="button is-small is-fullwidth is-outlined is-info" >Credits</a></li>
+            <li style="padding:1px;"><a href="https://github.com/antography/wm1" target="_blank" class="button is-small is-fullwidth is-outlined is-info" >Github</a></li>
           </ul>
         </aside>
 
@@ -71,7 +72,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA==" crossorigin="anonymous"></script>
-  <script src="/static/wm1.js"></script>
+  <script src="/static/scripts/wm1.js"></script>
 </body>
 
 </html>
