--- a/templates/base/proxy.html
+++ b/templates/base/proxy.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dashboard</title>
+  <title>Hello Bulma!</title>
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
 <body class="has-background-white has-text-black" style="height:100vh"> 
-  dashboard
+  TEST
 </body>
 
 </html>
