--- a/templates/base/terminal.html
+++ b/templates/base/terminal.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
 </head>
 <body>
-  <nav class="navbar has-background-grey" style="border: 0;">
+  <nav class="navbar has-background-grey-dark" style="border: 0;">
 
     <div class="navbar-item is-size-7" id="cpumemlabel">
     <span style="font-size: small;">status: <span style="font-size: small;" id="status">connecting...</span></span>
@@ -25,7 +25,7 @@
 <script src="https://unpkg.com/xterm@3.6.0/dist/addons/fullscreen/fullscreen.js"></script>
 <script src="https://unpkg.com/xterm@3.6.0/dist/addons/search/search.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
-<script src="/static/terminal.js"></script>
+<script src="/static/scripts/terminal.js"></script>
 
 <script>
   Terminal.applyAddon(fullscreen)
