--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Bulma!</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
-<body class="has-background-white has-text-black" style="height:100vh"> 
-  TEST
+<body class="has-background-grey-dark has-text-black" style="height:100vh"> 
+  This whole site is littered with placeholders :D
 </body>
 
 </html>
