--- a/templates/core/extmanager.html
+++ b/templates/core/extmanager.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Bulma!</title>
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
 <body class="has-background-light has-text-black" style="height:100vh"> 
@@ -24,7 +24,7 @@
       </thead>
     </table>
   </div>
-  <script src="/static/extmanager.js"></script>
+  <script src="/static/scripts/extmanager.js"></script>
 </body>
 
 </html>
