--- a/templates/custom/credits.html
+++ b/templates/custom/credits.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Credits</title>
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
 <body class="has-background-light has-text-black" style="height:100vh"> 
   <nav class="navbar has-background-light" style="border: 0;">
   </nav>
   <div class="container ">
-    nmap stuff
+    <a href="https://cockpit-project.org/" target="_blank">Cockpit</a> inspired the layout. <br>
+    <a href="https://github.com/cs01/pyxtermjs" target="_blank">pyxtermjs</a> for the web terminal<br>
+    <a href="https://github.com/miguelgrinberg/Flask-SocketIO-Chat" target="_blank">Flask-SocketIO-Chat</a> for how I wanted to organize the files <br>
   </div>
   <script src="/static/extmanager.js"></script>
 </body>
