--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,21 @@
 
 <body>
   <nav class="navbar is-dark has-background-black" role="navigation" aria-label="main navigation" style="border: 0;">
-    <div class="navbar-brand">
-
+    <div class="navbar-start">
+      <div class="navbar-item has-dropdown is-hoverable has-background-black">
+        <a class="navbar-link" id ="wsman" style="">
+          Workspace #1
+        </a>
+    
+        <div class="navbar-dropdown has-background-grey-dark" style="border-top: 0;">
+          <a class="navbar-item has-text-white">
+            Stats
+          </a>
+          <a class="navbar-item has-text-white">
+            Manage
+          </a>
+        </div>
+      </div>
     </div>
     <div class="navbar-menu">
       <div class="navbar-end">
@@ -24,7 +37,7 @@
   </nav>
 
   <div class="columns is-gapless">
-    <div class="column is-narrow has-background-grey-darker " style="height:calc(100vh - 3.25rem);">
+    <div class="column is-narrow has-background-grey-darker " id="sidebar"style="height:calc(100vh - 3.25rem);">
       <div class="container is-fluid">
         <br>
         <aside class="menu">
@@ -57,6 +70,7 @@
           </p>
           <ul class="menu-list">
             <li style="padding:1px;"><a href="/#/credits" class="button is-small is-fullwidth is-outlined is-info" >Credits</a></li>
+            <li style="padding:1px;"><a href="/#/roadmap" class="button is-small is-fullwidth is-outlined is-info" >Roadmap</a></li>
             <li style="padding:1px;"><a href="https://github.com/antography/wm1" target="_blank" class="button is-small is-fullwidth is-outlined is-info" >Github</a></li>
           </ul>
         </aside>
