--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="has-background-grey-dark has-text-black" style="height:100vh"> 
-  This whole site is littered with placeholders :D
+  "Tank on tank combat is just offensive security"
 </body>
 
 </html>
