--- a/templates/custom/roadmap.html
+++ b/templates/custom/roadmap.html
@@ -46,7 +46,7 @@
         </div>
       </li>
       <li class="steps-segment">
-        <span class="steps-marker is-warning"></span>
+        <span class="steps-marker is-success"></span>
         <div class="steps-content">
           <p>Nmap intergration</p>
         </div>
@@ -73,6 +73,18 @@
         <span class="steps-marker is-danger"></span>
         <div class="steps-content">
           <p>Proxy intergration</p>
+        </div>
+      </li>
+      <li class="steps-segment">
+        <span class="steps-marker is-danger"></span>
+        <div class="steps-content">
+          <p>Live collaboration</p>
+        </div>
+      </li>
+      <li class="steps-segment">
+        <span class="steps-marker is-danger"></span>
+        <div class="steps-content">
+          <p>Live spectators</p>
         </div>
       </li>
       
