Cleanup and small fixes

--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
-<body class="has-background-grey-dark has-text-black" style="height:100vh"> 
-  "Tank on tank combat is just offensive security"
+<body class="has-background-grey-dark has-text-black" style="height:100vh">
+  "Tank on tank combat is just high stakes penetration testing"
 </body>
 
 </html>
