--- a/templates/custom/roadmap.html
+++ b/templates/custom/roadmap.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
-<body class="has-background-light has-text-black" style="height:100vh"> 
+<body class="has-background-light has-text-black" style="height:100vh">
   <nav class="navbar has-background-light" style="border: 0;">
   </nav>
   <div class="container ">
@@ -22,7 +22,7 @@
         </div>
       </li>
       <li class="steps-segment ">
-        <span class="steps-marker is-warning" ></span>
+        <span class="steps-marker is-warning"></span>
         <div class="steps-content">
           <p>Extensions manager</p>
         </div>
@@ -48,7 +48,7 @@
       <li class="steps-segment">
         <span class="steps-marker is-success"></span>
         <div class="steps-content">
-          <p>Nmap intergration</p>
+          <p>[Completed] Nmap intergration</p>
         </div>
       </li>
       <li class="steps-segment">
@@ -87,10 +87,8 @@
           <p>Live spectators</p>
         </div>
       </li>
-      
     </ul>
   </div>
-  <script src="/static/extmanager.js"></script>
 </body>
 
 </html>
