--- a/templates/base/nmap.html
+++ b/templates/base/nmap.html
@@ -71,11 +71,16 @@
             <li>
               <div class="field has-addons">
                 <div class="control is-expanded">
-                  <input type="test" class="input is-small" id="placeholder" placeholder="Name">
+                  <input type="text" class="input is-small" id="nmapfname" placeholder="run nmap first" disabled>
                 </div>
                 <p class="control">
                   <a class="button is-outlined is-success is-small" id="">
-                    + Stash
+                    + Keep
+                  </a>
+                </p>
+                <p class="control">
+                  <a class="button is-outlined is-danger is-small" id="">
+                    - Delete
                   </a>
                 </p>
               </div>
