--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -10,7 +10,18 @@
 </head>
 
 <body class="has-background-grey-dark has-text-black" style="height:100vh">
-  "Tank on tank combat is just high stakes penetration testing"
+  
+  <div class="card" style="max-width: 350px;">
+    <div class="card-content">
+      <p class="title">
+        "Tank on tank combat is just high stakes penetration testing"
+      </p>
+      <p class="subtitle">
+        Antography
+      </p>
+    </div>
+  </div>
+  <script src="/static/scripts/dashboard.js"></script>
 </body>
 
 </html>
