--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
             <input type="test" class="input is-small" id="workspacename" placeholder="example workspace 1">
           </div>
           <p class="control">
-            <a class="button is-outlined is-success is-small" id="">
+            <a class="button is-outlined is-success is-small" id="" onclick="setactwksp()">
               Set
             </a>
           </p>
@@ -128,6 +128,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
     integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA=="
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bulma-toast@2.0.3/dist/bulma-toast.min.js"></script>
   <script src="/static/scripts/wm1.js"></script>
 </body>
 
