added a buggy revshell

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
     </div>
     <div class="navbar-menu">
       <div class="navbar-end">
+        <div class="navbar-item is-size-7" id="revshell_status">
+           Revshell status: disconnected
+        </div>
         <div class="navbar-item is-size-7" id="cpumemlabel">
           CPU & Mem
         </div>
@@ -54,6 +57,7 @@
           <ul class="menu-list">
             <li style="padding:1px;"><a href="/#/terminal" onclick="setterm()" class="button is-small is-fullwidth is-outlined is-info" >Terminal</a></li>
             <li style="padding:1px;"><a href="/#/nmap" class="button is-small is-fullwidth is-outlined is-info" >Nmap</a></li>
+            <li style="padding:1px;"><a href="/#/rshell" class="button is-small is-fullwidth is-outlined is-info" >Reverse Shell</a></li>
             <li style="padding:1px;"><a href="/#/proxy" class="button is-small is-fullwidth is-outlined is-info" >Proxy</a></li>
             
           </ul>
