+mk dash sec. for ext in manifest +readme +cleanup

--- a/templates/custom/roadmap.html
+++ b/templates/custom/roadmap.html
@@ -60,9 +60,21 @@
             </div>
           </li>
           <li class="steps-segment">
+            <span class="steps-marker is-warning"></span>
+            <div class="steps-content">
+              <p>Intergrated revshell</p>
+            </div>
+          </li>
+          <li class="steps-segment">
             <span class="steps-marker is-danger"></span>
             <div class="steps-content">
               <p>text encoding tools</p>
+            </div>
+          </li>
+          <li class="steps-segment">
+            <span class="steps-marker is-danger"></span>
+            <div class="steps-content">
+              <p>Intergrated workspace browser + editor</p>
             </div>
           </li>
           <li class="steps-segment">
@@ -103,6 +115,8 @@
         Reloading the page sends you back to the dashboard<br>
         Typing "exit" in the terminal causes an IO error, requiring an app restart to resolve<br>
         Having no active workspaces causes a server error<br>
+        After running for some time, the server throws: KeyError: 'Session is disconnected'<br>
+        Revshell floods console with entries<br>
       </div>
     </div>
   </div>
