--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="overflow-y: hidden;">
+<html >
 
 <head>
   <meta charset="utf-8">
@@ -9,16 +9,20 @@
   <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
 
-<body class="has-background-grey-dark has-text-black" style="height:100vh">
-  
-  <div class="card" style="max-width: 350px;">
-    <div class="card-content">
-      <p class="title">
-        "Tank on tank combat is just high stakes penetration testing"
-      </p>
-      <p class="subtitle">
-        Antography
-      </p>
+<body class="has-background-grey-dark has-text-black" style="min-height:100vh">
+
+  <div class="container" id="loadingload">
+    <div class="notification">
+      <div class="card">
+        <div class="card-content">
+          <p class="title">
+            "Tank on tank combat is just high stakes penetration testing"
+          </p>
+          <p class="subtitle">
+            Antography
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <script src="/static/scripts/dashboard.js"></script>
