~adding wksp ~xml for extensions list +small chngs

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
   <div class="columns is-gapless">
     <div class="column is-narrow has-background-grey-darker " id="sidebar" style="height:calc(100vh - 3.25rem);">
-      <div class="container is-fluid">
+      <div class="container" style="padding-left: 16px; padding-right: 16px;">
         <br>
         <aside class="menu">
           <p class="menu-label has-text-white">
@@ -115,6 +115,11 @@
           <p class="control">
             <a class="button is-outlined is-success is-small" id="" onclick="setactwksp()">
               Set
+            </a>
+          </p>
+          <p class="control">
+            <a class="button is-outlined is-warning is-small" id="" onclick="addactwksp()">
+              Create
             </a>
           </p>
         </div>
