--- a/templates/core/extmanager.html
+++ b/templates/core/extmanager.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Bulma!</title>
+  <title>ExtManager</title>
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css">
   <link rel="stylesheet" href="/static/sheets/style.css">
 </head>
