--- a/templates/index.html
+++ b/templates/index.html
@@ -47,41 +47,48 @@
             General
           </p>
           <ul class="menu-list has-text-white">
-            <li style="padding:1px;"><a href="/#/dashboard"
-                class="button is-small is-fullwidth is-outlined is-info ">Dashboard</a></li>
-            <li style="padding:1px;"><a href="/#/settings"
-                class="button is-small is-fullwidth is-outlined is-info">Settings</a></li>
-            <li style="padding:1px;"><a href="/#/extmanager"
-                class="button is-small is-fullwidth is-outlined is-info">Manage Extensions</a></li>
+            {%for module in enabled: %}
+              {% if enabled[module].class == 'core' %}
+                <li style="padding:1px;"><a href="/#{{enabled[module].path}}"
+                  class="button is-small is-fullwidth is-outlined is-info ">{{enabled[module].title}}</a></li>
+              {% endif %}
+            {% endfor %}
           </ul>
           <p class="menu-label has-text-white">
             Base Extensions
           </p>
           <ul class="menu-list">
-            <li style="padding:1px;"><a href="/#/terminal" onclick="setterm()" class="button is-small is-fullwidth is-outlined is-info" >Terminal</a></li>
-            <li style="padding:1px;"><a href="/#/nmap" class="button is-small is-fullwidth is-outlined is-info" >Nmap</a></li>
-            <li style="padding:1px;"><a href="/#/rshell" class="button is-small is-fullwidth is-outlined is-info" >Reverse Shell</a></li>
-            <li style="padding:1px;"><a href="/#/proxy" class="button is-small is-fullwidth is-outlined is-info" >Proxy</a></li>
+            {%for module in enabled: %}
+              {% if enabled[module].class == 'base' %}
+                {% if not enabled[module].onclick %}
+                <li style="padding:1px;"><a href="/#{{enabled[module].path}}" class="button is-small is-fullwidth is-outlined is-info ">{{enabled[module].title}}</a></li>
+                {% else %}
+                <li style="padding:1px;"><a href="/#{{enabled[module].path}}" onclick="{{enabled[module].onclick}}" class="button is-small is-fullwidth is-outlined is-info ">{{enabled[module].title}}</a></li>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
           </ul>
           <p class="menu-label has-text-white">
             Custom Extensions
           </p>
           <ul class="menu-list">
-            <li style="padding:1px;"><a href="/#/squidclient"
-                class="button is-small is-fullwidth is-outlined is-info">Squidclient</a></li>
-            <li style="padding:1px;"><a href="/#/notes"
-                class="button is-small is-fullwidth is-outlined is-info">Notes</a></li>
+            {%for module in enabled: %}
+              {% if enabled[module].class == 'custom' %}
+                <li style="padding:1px;"><a href="/#{{enabled[module].path}}"
+                  class="button is-small is-fullwidth is-outlined is-info ">{{enabled[module].title}}</a></li>
+              {% endif %}
+            {% endfor %}
           </ul>
           <p class="menu-label has-text-white">
             Other
           </p>
           <ul class="menu-list">
-            <li style="padding:1px;"><a href="/#/credits"
-                class="button is-small is-fullwidth is-outlined is-info">Credits</a></li>
-            <li style="padding:1px;"><a href="/#/roadmap"
-                class="button is-small is-fullwidth is-outlined is-info">Roadmap</a></li>
-            <li style="padding:1px;"><a href="https://github.com/antography/wm1" target="_blank"
-                class="button is-small is-fullwidth is-outlined is-info">Github</a></li>
+            {%for module in enabled: %}
+              {% if enabled[module].class == 'other' %}
+                <li style="padding:1px;"><a href="/#{{enabled[module].path}}"
+                  class="button is-small is-fullwidth is-outlined is-info ">{{enabled[module].title}}</a></li>
+              {% endif %}
+            {% endfor %}
           </ul>
         </aside>
 
