--- a/templates/custom/roadmap.html
+++ b/templates/custom/roadmap.html
@@ -18,7 +18,7 @@
       <div class="column">
         <ul class="steps is-vertical is-short is-small has-gaps">
           <li class="steps-segment is-active">
-            <span href="#" class="steps-marker is-warning "></span>
+            <span href="#" class="steps-marker is-info "></span>
             <div class="steps-content">
               <p>Dashboard</p>
             </div>
